--- a/style.css
+++ b/style.css
@@ -1,47 +1,36 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
-}
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #212529;
 }
 
 h1 {
-  color: #007bff;
-}
-
-.info {
-  margin-top: 20px;
-}
-
-p {
-  margin: 10px 0;
-}
-
-strong {
-  font-weight: bold;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.5;
+  font-family: cursive;
 }
 
 img {
-  max-width: 50%;
-  height: auto;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  max-width: 10%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 a {
-  color: #007bff;
   text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
+  color: #000;
+  font-weight: 900;
+  font-size: 1rem;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #972222;
 }
